<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.MeusDadosFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDadosID"
        android:text="@string/id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="110dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDadosID"
        app:layout_constraintTop_toBottomOf="@+id/tvDadosID"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDadosEmail"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/etDadosID"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDadosEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvDadosEmail"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDadosNome"
        android:text="@string/nome"
        app:layout_constraintTop_toBottomOf="@+id/etDadosEmail"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDadosNome"
        app:layout_constraintTop_toBottomOf="@+id/tvDadosNome"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDadosContato"
        android:text="@string/contato"
        app:layout_constraintTop_toBottomOf="@+id/etDadosNome"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDadosContato"
        android:hint="Digite aqui o email do seu contato de emergência"
        app:layout_constraintTop_toBottomOf="@+id/tvDadosContato"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/bDadosEditar"
        android:text="@string/editar"
        app:layout_constraintTop_toBottomOf="@+id/etDadosContato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:id="@+id/bDadosVoltar"
        app:layout_constraintTop_toBottomOf="@+id/bDadosEditar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>