<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginUsuario"
        android:text="@string/email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="200dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLoginUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginUsuario"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginSenha"
        android:text="@string/senha"
        app:layout_constraintTop_toBottomOf="@+id/etLoginUsuario"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLoginSenha"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginSenha"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/bLoginEntrar"
        android:text="@string/entrar"
        app:layout_constraintTop_toBottomOf="@+id/etLoginSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastar"
        android:id="@+id/bLoginCadastroUsuario"
        app:layout_constraintTop_toBottomOf="@+id/bLoginEntrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>